--- a/src/DDD_CQRS_Sample.Api/appsettings.Development.json
+++ b/src/DDD_CQRS_Sample.Api/appsettings.Development.json
@@ -1,11 +1,23 @@
 {
   "ConnectionStrings": {
-    "Database": "Data Source=.;Initial Catalog=DDD_CQRS_Sample;User ID=user1;Password=123456;Encrypt=False"
+    "Database": "Data Source=.;Initial Catalog=DDD_CQRS_Sample;User ID=user1;Password=123456;Encrypt=False",
+    "Hangfire": "Data Source=.;Initial Catalog=DDD_CQRS_Sample_Hangfire;User ID=user1;Password=123456;Encrypt=False"
   },
-    "Logging": {
-        "LogLevel": {
-            "Default": "Information",
-            "Microsoft.AspNetCore": "Warning"
-        }
+  "Outbox": {
+    "IntervalInSeconds": 5,
+    "BatchSize": 10
+  },
+  "EmailSettings": {
+    "Host": "smtp.gmail.com",
+    "Port": 587,
+    "Email": "mobileapprayantec@gmail.com",
+    "Username": "mobileapprayantec@gmail.com",
+    "Password": "dcunalevxdrzzpjh"
+  },
+  "Logging": {
+    "LogLevel": {
+      "Default": "Information",
+      "Microsoft.AspNetCore": "Warning"
     }
+  }
 }
