--- a/src/DDD_CQRS_Sample.Infrastructure/DDD_CQRS_Sample.Infrastructure.csproj
+++ b/src/DDD_CQRS_Sample.Infrastructure/DDD_CQRS_Sample.Infrastructure.csproj
@@ -1,20 +1,24 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
-  <PropertyGroup>
-    <TargetFramework>net8.0</TargetFramework>
-    <ImplicitUsings>enable</ImplicitUsings>
-    <Nullable>enable</Nullable>
-  </PropertyGroup>
+	<PropertyGroup>
+		<TargetFramework>net8.0</TargetFramework>
+		<ImplicitUsings>enable</ImplicitUsings>
+		<Nullable>enable</Nullable>
+	</PropertyGroup>
 
-  <ItemGroup>
-    <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="8.0.4" />
-    <PackageReference Include="Scrutor" Version="4.2.2" />
-  </ItemGroup>
+	<ItemGroup>
+		<PackageReference Include="Hangfire.AspNetCore" Version="1.8.12" />
+		<PackageReference Include="Hangfire.SqlServer" Version="1.8.12" />
+		<PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="8.0.4" />
+		<PackageReference Include="Dapper" Version="2.1.28" />
+		<PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
+		<PackageReference Include="Scrutor" Version="4.2.2" />
+	</ItemGroup>
 
-  <ItemGroup>
-    <ProjectReference Include="..\DDD_CQRS_Sample.Application\DDD_CQRS_Sample.Application.csproj" />
-    <ProjectReference Include="..\DDD_CQRS_Sample.Domain\DDD_CQRS_Sample.Domain.csproj" />
-    <ProjectReference Include="..\Shared\Shared.csproj" />
-  </ItemGroup>
+	<ItemGroup>
+		<ProjectReference Include="..\DDD_CQRS_Sample.Application\DDD_CQRS_Sample.Application.csproj" />
+		<ProjectReference Include="..\DDD_CQRS_Sample.Domain\DDD_CQRS_Sample.Domain.csproj" />
+		<ProjectReference Include="..\Shared\Shared.csproj" />
+	</ItemGroup>
 
 </Project>
