--- a/src/DDD_CQRS_Sample.Api/appsettings.Development.json
+++ b/src/DDD_CQRS_Sample.Api/appsettings.Development.json
@@ -1,10 +1,10 @@
 {
   "ConnectionStrings": {
     "Database": "Data Source=.;Initial Catalog=DDD_CQRS_Sample;User ID=user1;Password=123456;Encrypt=False",
-    "Hangfire": "Data Source=.;Initial Catalog=DDD_CQRS_Sample_Hangfire;User ID=user1;Password=123456;Encrypt=False"
+    "Hangfire": "Data Source=.;Initial Catalog=DDD_CQRS_Sample;User ID=user1;Password=123456;Encrypt=False"
   },
   "Outbox": {
-    "IntervalInSeconds": 5,
+    "Schedule": "0/15 * * * * *",
     "BatchSize": 10
   },
   "EmailSettings": {
